# 5Gr-SO/nbi/python-flask-server/swagger_server/models/pnf_onboarding_reply.py
@@ -1,0 +1,75 @@
+# Author: Jordi Baranda
+# Copyright (C) 2020 CTTC/CERCA
+# License: To be defined. Currently use is restricted to partners of the 5Growth project,
+#          http://5growth.eu/, no use or redistribution of any kind outside the 5G-Transformer project is
+#          allowed.
+# Disclaimer: this software is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+# either express or implied.
+
+# coding: utf-8
+
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class PnfOnboardingReply(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, pnfd_info_id: str=None):  # noqa: E501
+        """PnfOnboardingReply - a model defined in Swagger
+
+        :param pnfd_info_id: The pnfd_info_id of this PnfOnboardingReply.  # noqa: E501
+        :type pnfd_info_id: str
+        """
+        self.swagger_types = {
+            "pnfd_info_id": str
+        }
+
+        self.attribute_map = {
+            "pnfd_info_id": "pnfdInfoId"
+        }
+
+        self._pnfd_info_id = pnfd_info_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> "PnfOnboardingReply":
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The PnfOnboardingReply of this PnfOnboardingReply.  # noqa: E501
+        :rtype: PnfOnboardingReply
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def pnfd_info_id(self) -> str:
+        """Gets the pnfd_info_id of this PnfOnboardingReply.
+
+
+        :return: The pnfd_info_id of this PnfOnboardingReply.
+        :rtype: str
+        """
+        return self._pnfd_info_id
+
+    @pnfd_info_id.setter
+    def pnfd_info_id(self, pnfd_info_id: str):
+        """Sets the pnfd_info_id of this PnfOnboardingReply.
+
+
+        :param pnfd_info_id: The pnfd_info_id of this PnfOnboardingReply.
+        :type pnfd_info_id: str
+        """
+        if pnfd_info_id is None:
+            raise ValueError("Invalid value for `pnfd_info_id`, must not be `None`")  # noqa: E501
+
+        self._pnfd_info_id = pnfd_info_id
